[gd_scene load_steps=9 format=2]

[ext_resource path="res://source/TheCrown.gd" type="Script" id=1]
[ext_resource path="res://assets/png/Sprite.png" type="Texture" id=2]
[ext_resource path="res://assets/png/Crown.png" type="Texture" id=3]
[ext_resource path="res://source/CrownSprite.gd" type="Script" id=4]
[ext_resource path="res://assets/sfx/Pop.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/Swoosh.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]

resource_name = "."
length = 0.31
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.5, 0.75 ), Vector2( 1.2, 0.6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("PopSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}

[sub_resource type="AudioStreamRandomPitch" id=2]

audio_stream = ExtResource( 6 )
random_pitch = 1.5

[node name="TheCrown" type="Node2D"]

scale = Vector2( 0.3, 0.6 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
transition_duration = 0.5

[node name="ReferenceSprite" type="Sprite" parent="." index="0"]

position = Vector2( 0, -50 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="Crown" type="Sprite" parent="ReferenceSprite" index="0"]

position = Vector2( 0, 50 )
scale = Vector2( 1.2, 0.6 )
texture = ExtResource( 3 )
offset = Vector2( 0, -215 )
script = ExtResource( 4 )
_sections_unfolded = [ "Focus", "Offset", "Rect", "Transform", "Visibility", "Z" ]
__meta__ = {
"_edit_group_": true
}

[node name="PopOutAnimation" type="AnimationPlayer" parent="ReferenceSprite/Crown" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/. = SubResource( 1 )
blend_times = [  ]
autoplay = ""
_sections_unfolded = [ "Playback Options", "playback" ]

[node name="PopSound" type="AudioStreamPlayer2D" parent="ReferenceSprite/Crown" index="1"]

position = Vector2( 0, 83.3333 )
scale = Vector2( 0.972222, 0.972222 )
stream = ExtResource( 5 )
volume_db = 10.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="TransitionTween" type="Tween" parent="." index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="SwooshSound" type="AudioStreamPlayer2D" parent="." index="2"]

stream = SubResource( 2 )
volume_db = 15.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1


